# LED-Hacking

./: .gitignore  README.md
ESP-LSD-Hacking/: platformio.ini
ESP-LSD-Hacking/src/: main.cpp  safe_led.cpp  safe_led.h  usercode.c  usercode.h
ESP-LSD-Hacking/src/task1/accessable/: usercode.cpp
ESP-LSD-Hacking/src/task1/hidden/: internal.h  safe_led.cpp
ESP-LSD-Hacking/src/task2/accessable/: usercode.h
ESP-LSD-Hacking/tasks/task1/accessable/: safe_led.h  usercode.h
ESP-LSD-Hacking/tasks/task1/hidden/: internal.h
ESP-LSD-Hacking/tasks/task2/accessable/: safe_led.hpp  usercode.cpp
freecad-hell/led-matrix-box/: v1-Körper.stl  v1.20250523-195925.FCBak  v1.FCStd  v2-Körper.stl  v2.20250523-203726.FCBak  v2.FCStd  v3-Körper.stl  v3.14-Körper.stl  v3.20250524-011831.FCBak  v3.20250524-015431.FCBak  v3.FCStd  v4-Körper.stl  v4.20250524-041121.FCBak  v4.FCStd
freecad-hell/schachtel-hinten/: v1-Body.stl  v1.20250524-015429.FCBak  v1.20250524-041636.FCBak  v1.FCStd  v2-Body.stl
server/: .upload.sh.swm  .upload.sh.swn  README.md  package-lock.json  package.json  reset.sh  server.js  test-server.js  upload.sh  upload_wrap.sh
website/: Cargo.toml  build.sh  flake.nix
website-js/esp-lsd-hacking/: package-lock.json  package.json
website-js/esp-lsd-hacking/public/: ESP-LSD-Hacking
website-js/esp-lsd-hacking/src/: App.css  App.js
website/src/: .main.rs  app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
website/src/components/: challange.rs  code_view.rs  mod.rs
website/src/structs/: challange.rs  mod.rs
website/style/: main.scss
(+25 files in other folders)
