[package]
name = "esp_lsd_hacking"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }

axum = { version = "0.8.4", optional = true }


console_error_panic_hook = "0.1"
leptos_axum = { version = "0.8.2", optional = true }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.100"
thiserror = "1"
tracing = { version = "0.1", optional = true }
http = "1"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
#sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"], optional = true }
#futures-util = { version = "0.3.31", optional = true}
#doubloon = { version = "0.2.0", features = ["serde"]}
#rust_decimal = "1.36.0"
#futures = "0.3"
time = {version = "0.3.36", features = ["macros", "serde"], optional = true}
ron = {version = "0.8", optional = true}
web-time = "1.1.0"
leptos-use = "0.13.*"
itertools = "0.13.0"
argh = {version = "0.1.12", optional = true}
